--- a/packages/node-opcua-pseudo-session/package.json
+++ b/packages/node-opcua-pseudo-session/package.json
@@ -12,6 +12,7 @@
     "types": "./dist/index.d.ts",
     "dependencies": {
         "node-opcua-assert": "2.77.0",
+        "node-opcua-basic-types": "2.77.0",
         "node-opcua-constants": "2.77.0",
         "node-opcua-data-model": "2.78.0",
         "node-opcua-data-value": "2.78.0",
@@ -23,6 +24,7 @@
         "node-opcua-service-translate-browse-path": "2.78.0",
         "node-opcua-service-write": "2.78.0",
         "node-opcua-status-code": "2.77.0",
+        "node-opcua-types": "2.78.0",
         "node-opcua-variant": "2.78.0",
         "thenify": "^3.3.1"
     },
