--- a/packages/node-opcua-address-space/package.json
+++ b/packages/node-opcua-address-space/package.json
@@ -16,7 +16,7 @@
         "c": "mocha --version"
     },
     "dependencies": {
-        "@types/semver": "7.3.12",
+        "@types/semver": "^7.3.12",
         "@types/lodash": "4.14.185",
         "async": "^3.2.4",
         "chalk": "4.1.2",
