--- a/packages/node-opcua-client-dynamic-extension-object/package.json
+++ b/packages/node-opcua-client-dynamic-extension-object/package.json
@@ -13,6 +13,7 @@
         "chalk": "4.1.2",
         "node-opcua-assert": "2.77.0",
         "node-opcua-binary-stream": "2.77.0",
+        "node-opcua-constants": "2.77.0",
         "node-opcua-data-model": "2.81.0",
         "node-opcua-data-value": "2.81.0",
         "node-opcua-debug": "2.77.0",
