--- a/packages/node-opcua-client-crawler/package.json
+++ b/packages/node-opcua-client-crawler/package.json
@@ -12,7 +12,6 @@
         "test": "mocha "
     },
     "dependencies": {
-        "@types/underscore": "^1.11.4",
         "async": "^3.2.4",
         "chalk": "4.1.2",
         "node-opcua-address-space": "2.81.0",
@@ -28,12 +27,12 @@
         "node-opcua-status-code": "2.77.0",
         "node-opcua-types": "2.81.0",
         "node-opcua-utils": "2.77.0",
-        "thenify": "^3.3.1",
-        "underscore": "^1.13.6"
+        "thenify": "^3.3.1"
     },
     "devDependencies": {
         "should": "^13.2.3",
-        "sinon": "^14.0.1"
+        "sinon": "^14.0.1",
+        "node-opcua-pseudo-session": "2.81.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
