--- a/packages/node-opcua-samples/package.json
+++ b/packages/node-opcua-samples/package.json
@@ -25,6 +25,7 @@
         "node-opcua": "2.81.0",
         "node-opcua-address-space": "2.81.0",
         "node-opcua-assert": "2.77.0",
+        "node-opcua-client-crawler": "2.81.0",
         "node-opcua-crypto": "^1.12.0",
         "node-opcua-pki": "^2.18.0",
         "node-opcua-server-configuration": "2.81.0",
