--- a/packages/node-opcua-client-crawler/package.json
+++ b/packages/node-opcua-client-crawler/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-opcua-client-crawler",
-    "version": "2.81.0",
+    "version": "2.82.0",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "description": "pure nodejs OPCUA SDK - module -client-crawler",
@@ -14,25 +14,25 @@
     "dependencies": {
         "async": "^3.2.4",
         "chalk": "4.1.2",
-        "node-opcua-address-space": "2.81.0",
+        "node-opcua-address-space": "2.82.0",
         "node-opcua-assert": "2.77.0",
-        "node-opcua-client": "2.81.0",
+        "node-opcua-client": "2.82.0",
         "node-opcua-constants": "2.77.0",
-        "node-opcua-data-model": "2.81.0",
-        "node-opcua-data-value": "2.81.0",
-        "node-opcua-debug": "2.77.0",
-        "node-opcua-nodeid": "2.81.0",
+        "node-opcua-data-model": "2.82.0",
+        "node-opcua-data-value": "2.82.0",
+        "node-opcua-debug": "2.82.0",
+        "node-opcua-nodeid": "2.82.0",
         "node-opcua-pki": "^2.18.0",
-        "node-opcua-service-browse": "2.81.0",
-        "node-opcua-status-code": "2.77.0",
-        "node-opcua-types": "2.81.0",
-        "node-opcua-utils": "2.77.0",
+        "node-opcua-service-browse": "2.82.0",
+        "node-opcua-status-code": "2.82.0",
+        "node-opcua-types": "2.82.0",
+        "node-opcua-utils": "2.82.0",
         "thenify": "^3.3.1"
     },
     "devDependencies": {
+        "node-opcua-pseudo-session": "2.82.0",
         "should": "^13.2.3",
-        "sinon": "^14.0.1",
-        "node-opcua-pseudo-session": "2.81.0"
+        "sinon": "^14.0.1"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
