--- a/packages/node-opcua-pseudo-session/package.json
+++ b/packages/node-opcua-pseudo-session/package.json
@@ -14,6 +14,7 @@
         "node-opcua-assert": "2.77.0",
         "node-opcua-basic-types": "2.82.0",
         "node-opcua-constants": "2.77.0",
+        "node-opcua-debug": "2.82.0",
         "node-opcua-data-model": "2.82.0",
         "node-opcua-data-value": "2.82.0",
         "node-opcua-nodeid": "2.82.0",
