--- a/packages/node-opcua-samples/package.json
+++ b/packages/node-opcua-samples/package.json
@@ -29,6 +29,8 @@
         "node-opcua-crypto": "^1.12.0",
         "node-opcua-pki": "^2.18.3",
         "node-opcua-server-configuration": "2.84.0",
+        "node-opcua-address-space-for-conformance-testing": "2.84.0",
+        "node-opcua-vendor-diagnostic": "2.84.0",
         "node-opcua-utils": "2.83.0",
         "sprintf-js": "^1.1.2",
         "treeify": "^1.1.0",
