--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ environment:
     # - nodejs_version: "12"  (deprecated in April 30th 2022)
     # - nodejs_version: "14"
     - nodejs_version: "16"
-    - nodejs_version: "18" 
+    # - nodejs_version: "18" 
 
 platform:
   - x64
