--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,12 +19,12 @@ jobs:
   build_on_windows:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
       with:
         path: ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-store
@@ -33,7 +33,6 @@ jobs:
     - run: pnpm recursive install --no-frozen-lockfile
     - run: pnpm run build
     - run: pnpm run pretest
-    - run: hostname 
     - run: pnpm test
   build:
     runs-on: ubuntu-latest
@@ -42,12 +41,12 @@ jobs:
         node-version: [16.x]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
       with:
         path: ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-store
@@ -55,6 +54,7 @@ jobs:
     - run: pnpm run consistency
     - run: pnpm recursive install --no-frozen-lockfile
     - run: pnpm run build
+    - run: hostname 
     - run: pnpm run pretest
     - run: pnpm test
   coverage:
@@ -63,20 +63,21 @@ jobs:
       matrix:
         node-version: [ 14.x]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}  
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-pnpm-store
       - run: npm install -g nyc@14 istanbul coveralls codecov
       - run: npm install -g codeclimate-test-reporter
-      - run: npm install -g pnpm@7
+      - run: npm install -g pnpm
       - run: pnpm recursive install --no-frozen-lockfile
       - run: pnpm run build 
+      - run: hostname 
       - run: pnpm run pretest
       - run: make test-cov     
         
