--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -50,6 +50,7 @@
         { "path": "node-opcua-service-secure-channel" },
         { "path": "node-opcua-types" },
         { "path": "node-opcua-nodeset-woodworking" },
-        { "path": "node-opcua-nodeset-ijt" }
+        { "path": "node-opcua-nodeset-ijt" },
+        { "path": "node-opcua-units" }
     ]
 }
