--- a/packages/node-opcua-file-transfer/package.json
+++ b/packages/node-opcua-file-transfer/package.json
@@ -14,6 +14,7 @@
         "node-opcua-address-space": "2.91.1",
         "node-opcua-assert": "2.88.0",
         "node-opcua-basic-types": "2.90.1",
+        "node-opcua-binary-stream": "2.90.1",
         "node-opcua-constants": "2.88.0",
         "node-opcua-data-model": "2.90.1",
         "node-opcua-debug": "2.90.1",
