--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
-        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything --target=latest && node  ./node_modules/lerna/cli.js exec --concurrency 1 --sort --stream ncu -- -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything --target=latest --packageFile package.json ",
+        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && node  ./node_modules/lerna/cli.js exec --concurrency 1 --sort --stream ncu -- -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest --packageFile package.json ",
         "ncu_": "npx npm-check --skip-unused -ayu && node  ./node_modules/lerna/cli.js exec --sort --concurrency 1 --stream -- npx npm-check --skip-unused -ayu",
         "prettier-watch": "onchange \"packages/*/(src|test|source)/**/*.(js|ts)\" -v -p -- prettier --write {{changed}}",
         "lebab-let": "node  ./node_modules/lerna/cli.js exec lebab  --replace index.js  --transform let && node  ./node_modules/lerna/cli.js exec lebab  --replace test  --transform let && node  ./node_modules/lerna/cli.js exec lebab  --replace src  --transform let",
@@ -65,43 +65,43 @@
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@types/mocha": "^10.0.1",
         "@types/prettier": "^2.7.2",
-        "@typescript-eslint/eslint-plugin": "^5.48.0",
-        "@typescript-eslint/parser": "^5.48.0",
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.54.1",
         "app-module-path": "^2.2.0",
         "benchmark": "^2.1.4",
         "bignumber.js": "^9.1.1",
         "coveralls": "^3.1.1",
-        "csv": "^6.2.5",
+        "csv": "^6.2.8",
         "enum": "3.0.4",
         "ersatz-node-expat": "^0.1.6",
         "eslint-cli": "^1.1.1",
-        "eslint-config-prettier": "^8.6.0",
-        "eslint-plugin-import": "^2.26.0",
+        "eslint-config-prettier": "^8.7.0",
+        "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^4.2.1",
         "literate-programming": "^1.1.0",
         "litpro": "^2.1.0",
         "mocha": "^10.2.0",
         "mocha-lcov-reporter": "^1.3.0",
         "nyc": "^15.1.0",
-        "prettier": "^2.8.2",
+        "prettier": "^2.8.4",
         "ts-node": "^10.9.1",
-        "typescript": "4.9.4"
+        "typescript": "4.9.5"
     },
     "typings": "./packages/node-opcua/node-opcua.d.ts",
     "dependencies": {
         "@ster5/global-mutex": "^1.2.0",
-        "@types/async": "^3.2.16",
+        "@types/async": "^3.2.18",
         "@types/bonjour": "^3.5.10",
         "@types/lodash": "4.14.191",
         "@types/long": "^4.0.2",
         "@types/mkdirp": "1.0.2",
-        "@types/node": "18.11.18",
+        "@types/node": "18.15.0",
         "@types/once": "^1.4.0",
         "@types/rimraf": "^3.0.2",
         "@types/sinon": "10.0.13",
         "@types/underscore": "^1.11.4",
         "@types/wordwrap": "^1.0.1",
-        "@types/yargs": "17.0.19",
+        "@types/yargs": "17.0.22",
         "async": "^3.2.4",
         "backoff": "^2.5.0",
         "better-assert": "^1.0.2",
@@ -111,21 +111,21 @@
         "chalk": "4.1.2",
         "cli-table3": "^0.6.3",
         "cli-truncate": "2.1.0",
-        "csv-parse": "5.3.3",
+        "csv-parse": "5.3.6",
         "date-utils": "^1.2.21",
         "deassertify": "^0.2.0",
         "delayed": "^2.0.0",
         "dequeue": "^1.0.5",
         "easy-table": "^1.2.0",
         "env-paths": "2.2.1",
-        "eslint": "8.31.0",
+        "eslint": "8.36.0",
         "exit": "^0.1.2",
         "fqdn": "^0.0.3",
         "hexy": "0.3.4",
         "hjson": "^3.2.2",
         "humanize": "0.0.9",
         "js2xmlparser": "^5.0.0",
-        "lerna": "6.4.0",
+        "lerna": "6.5.1",
         "lockfile": "^1.0.4",
         "lodash": "4.17.21",
         "long": "^4.0.0",
@@ -138,7 +138,7 @@
         "once": "^1.4.0",
         "pretty-ms": "^8.0.0",
         "progress": "^2.0.3",
-        "rimraf": "^3.0.2",
+        "rimraf": "3.0.2",
         "semver": "^7.3.8",
         "set-prototype-of": "^1.0.0",
         "shebang-loader": "^0.0.1",
@@ -149,7 +149,7 @@
         "sterfive-bonjour-service": "1.1.4",
         "thenify": "^3.3.1",
         "treeify": "^1.1.0",
-        "tslib": "^2.4.1",
+        "tslib": "^2.5.0",
         "underscore": "^1.13.6",
         "vorpal": "^1.12.0",
         "vorpal-repl": "^1.1.8",
