--- a/packages/node-opcua-certificate-manager/package.json
+++ b/packages/node-opcua-certificate-manager/package.json
@@ -26,7 +26,7 @@
     "devDependencies": {
         "mocha": "^10.2.0",
         "node-opcua-leak-detector": "2.90.1",
-        "rimraf": "^3.0.2",
+        "rimraf": "3.0.2",
         "should": "^13.2.3"
     },
     "eslintConfig": {
