--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
-    "packages": ["packages/*", "packages_extra/*"],
-    "version": "2.91.1",
+    "packages": [
+        "packages/*",
+        "packages_extra/*"
+    ],
+    "version": "2.92.0",
     "npmClient": "pnpm",
     "useWorkspaces": true,
     "exact": true
