fix lerna invocation in package.json

--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
         "_x_preinstall": "npm i browserify -g",
         "bootstrap": "pnpm recursive install && lerna bootstrap --concurrency 10 --ignore-scripts",
         "bootstrap-fast": "pnpm recursive install",
-        "build1": "node  ./node_modules/lerna/cli.js --stream --sort --concurrency=1 run build",
+        "build1": "lerna --stream --sort --concurrency=1 run build",
         "build": "npm run generateWithPNPM && tsc -b packages",
         "generateWithPNPM": "pnpm recursive run generate",
-        "generateWithLerna": "node  ./node_modules/lerna/cli.js run generate",
-        "pretest": "node  ./node_modules/lerna/cli.js run pretest",
+        "generateWithLerna": "lerna run generate",
+        "pretest": "lerna run pretest",
         "_old_test": "cd source && mocha test --color -R spec --recursive --timeout 200000 --bail",
         "test": "cd packages && node --expose-gc --max-old-space-size=1024 run_all_mocha_tests.js",
         "test1": "cd packages && node run_all_mocha_tests.js",
-        "testlerna": "node  ./node_modules/lerna/cli.js run --concurrency  8 --no-sort --stream test",
+        "testlerna": "lerna run --concurrency  8 --no-sort --stream test",
         "eslint": "eslint packages/**/src/*.js  packages/**/souce/*.ts packages/**/test_helpers/*",
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
-        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && node  ./node_modules/lerna/cli.js exec --concurrency 1 --sort --stream ncu -- -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest --packageFile package.json ",
-        "ncu_": "npx npm-check --skip-unused -ayu && node  ./node_modules/lerna/cli.js exec --sort --concurrency 1 --stream -- npx npm-check --skip-unused -ayu",
+        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && lerna exec --concurrency 1 --sort --stream ncu -- -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest --packageFile package.json ",
+        "ncu_": "npx npm-check --skip-unused -ayu && lerna exec --sort --concurrency 1 --stream -- npx npm-check --skip-unused -ayu",
         "prettier-watch": "onchange \"packages/*/(src|test|source)/**/*.(js|ts)\" -v -p -- prettier --write {{changed}}",
-        "lebab-let": "node  ./node_modules/lerna/cli.js exec lebab  --replace index.js  --transform let && node  ./node_modules/lerna/cli.js exec lebab  --replace test  --transform let && node  ./node_modules/lerna/cli.js exec lebab  --replace src  --transform let",
+        "lebab-let": "lerna exec lebab  --replace index.js  --transform let && lerna exec lebab  --replace test  --transform let && lerna exec lebab  --replace src  --transform let",
         "licences": " npx license-checker --production --summary",
         "alex": "npx alex documentation/*.md",
         "cost-of-modules": "npx cost-of-modules",
