--- a/packages/node-opcua-nodeset-di/package.json
+++ b/packages/node-opcua-nodeset-di/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "node-opcua-address-space-base": "2.97.0",
         "node-opcua-basic-types": "2.97.0",
+        "node-opcua-data-access": "2.97.0",
         "node-opcua-data-model": "2.97.0",
         "node-opcua-extension-object": "2.97.0",
         "node-opcua-nodeid": "2.97.0",
