--- a/packages/node-opcua-debug/package.json
+++ b/packages/node-opcua-debug/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-debug",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -debug",
+    "description": "pure nodejs OPCUA SDK - module debug",
     "scripts": {
         "build": "tsc -b",
         "clean": "npx rimraf node_modules dist *.tsbuildinfo",
@@ -33,5 +33,12 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c"
+    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c",
+    "files": [
+        "dist",
+        "distNodeJS",
+        "source",
+        "nodeJS.d.ts",
+        "nodeJS.js"
+    ]
 }
