--- a/packages/node-opcua-server-discovery/package.json
+++ b/packages/node-opcua-server-discovery/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-server-discovery",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -server-discovery",
+    "description": "pure nodejs OPCUA SDK - module server-discovery",
     "scripts": {
         "build": "tsc -b",
         "clean": "npx rimraf node_modules dist *.tsbuildinfo",
@@ -45,5 +45,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
