--- a/packages/node-opcua-service-register-node/package.json
+++ b/packages/node-opcua-service-register-node/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-service-register-node",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -service-register-node",
+    "description": "pure nodejs OPCUA SDK - module service-register-node",
     "scripts": {
         "build": "tsc -b",
         "test": "mocha",
@@ -28,5 +28,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
