--- a/packages/node-opcua-address-space-base/package.json
+++ b/packages/node-opcua-address-space-base/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-address-space-base",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -address-space",
+    "description": "pure nodejs OPCUA SDK - module address-space-base",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "engines": {
@@ -45,5 +45,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
