--- a/packages/node-opcua-address-space/package.json
+++ b/packages/node-opcua-address-space/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-address-space",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -address-space",
+    "description": "pure nodejs OPCUA SDK - module address-space",
     "main": "./dist/src/index_current.js",
     "types": "./dist/source/index.d.ts",
     "engines": {
@@ -84,5 +84,16 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "distHelpers",
+        "distNodeJS",
+        "source",
+        "src",
+        "nodeJS.d.ts",
+        "nodeJS.js",
+        "testHelpers.js",
+        "testHelpers.d.ts"
+    ]
 }
