--- a/packages/node-opcua-client-crawler/package.json
+++ b/packages/node-opcua-client-crawler/package.json
@@ -3,7 +3,7 @@
     "version": "2.98.0",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
-    "description": "pure nodejs OPCUA SDK - module -client-crawler",
+    "description": "pure nodejs OPCUA SDK - module client-crawler",
     "scripts": {
         "lint": "eslint source test",
         "format": "prettier --write source test",
@@ -49,5 +49,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
