--- a/packages/node-opcua-client-dynamic-extension-object/package.json
+++ b/packages/node-opcua-client-dynamic-extension-object/package.json
@@ -43,5 +43,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
