--- a/packages/node-opcua-constants/package.json
+++ b/packages/node-opcua-constants/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-constants",
     "version": "2.88.0",
-    "description": "pure nodejs OPCUA SDK - module -constants",
+    "description": "pure nodejs OPCUA SDK - module constants",
     "scripts": {
         "clean": "npx rimraf node_modules dist *.tsbuildinfo",
         "build": "tsc -b",
@@ -25,5 +25,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c"
+    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
