--- a/packages/node-opcua-convert-nodeset-to-javascript/package.json
+++ b/packages/node-opcua-convert-nodeset-to-javascript/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-convert-nodeset-to-javascript",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -convert-nodeset-to-javascript",
+    "description": "pure nodejs OPCUA SDK - module convert-nodeset-to-javascript",
     "types": "dist/index.d.ts",
     "main": "dist/index.js",
     "bin": "dist/main.js",
@@ -52,5 +52,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
