--- a/packages/node-opcua-data-value/package.json
+++ b/packages/node-opcua-data-value/package.json
@@ -3,7 +3,7 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -data-value",
+    "description": "pure nodejs OPCUA SDK - module data-value",
     "scripts": {
         "build": "tsc -b",
         "test": "mocha",
@@ -44,5 +44,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
