--- a/packages/node-opcua-hostname/package.json
+++ b/packages/node-opcua-hostname/package.json
@@ -3,7 +3,7 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "version": "2.88.0",
-    "description": "pure nodejs OPCUA SDK - module -hostname",
+    "description": "pure nodejs OPCUA SDK - module hostname",
     "scripts": {
         "build": "tsc -b",
         "lint": "eslint source/**/*.ts",
@@ -28,5 +28,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c"
+    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
