--- a/packages/node-opcua-leak-detector/package.json
+++ b/packages/node-opcua-leak-detector/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-leak-detector",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -leak-detector",
+    "description": "pure nodejs OPCUA SDK - module leak-detector",
     "main": "index.js",
     "scripts": {
         "lint": "eslint src/**/*.js",
@@ -29,5 +29,8 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c"
+    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c",
+    "files": [
+        "src"
+    ]
 }
