--- a/packages/node-opcua-local-discovery-server/package.json
+++ b/packages/node-opcua-local-discovery-server/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-local-discovery-server",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - local-discovery-server",
+    "description": "pure nodejs OPCUA SDK - module local-discovery-server",
     "bin": {
         "lds": "./bin/local-discovery-server.js",
         "local-discovery-server": "./bin/local-discovery-server.js",
@@ -34,5 +34,6 @@
         "yargs": "15.4.1"
     },
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": []
 }
