--- a/packages/node-opcua-model/package.json
+++ b/packages/node-opcua-model/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-model",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module - model",
+    "description": "pure nodejs OPCUA SDK - module model",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "private": true,
@@ -37,5 +37,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
