--- a/packages/node-opcua-modeler/package.json
+++ b/packages/node-opcua-modeler/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-modeler",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module - model",
+    "description": "pure nodejs OPCUA SDK - module modeler",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
@@ -50,5 +50,12 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "distNodeJS",
+        "source",
+        "nodeJS.d.ts",
+        "nodeJS.js"
+    ]
 }
