--- a/packages/node-opcua-nodesets/package.json
+++ b/packages/node-opcua-nodesets/package.json
@@ -4,7 +4,7 @@
     "types": "./dist/index.d.ts",
     "browser": "./index_web.js",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -nodesets",
+    "description": "pure nodejs OPCUA SDK - module nodesets",
     "scripts": {
         "build": "tsc -b",
         "clean": "npx rimraf node_modules dist *.tsbuildinfo",
@@ -25,5 +25,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c"
+    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
