--- a/packages/node-opcua-numeric-range/package.json
+++ b/packages/node-opcua-numeric-range/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-numeric-range",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -numeric-range",
+    "description": "pure nodejs OPCUA SDK - module numeric-range",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "scripts": {
@@ -38,5 +38,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
