--- a/packages/node-opcua-object-registry/package.json
+++ b/packages/node-opcua-object-registry/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-object-registry",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -object-registry",
+    "description": "pure nodejs OPCUA SDK - module object-registry",
     "main": "./dist/index.js",
     "scripts": {
         "build": "tsc -b",
@@ -32,5 +32,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c"
+    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
