--- a/packages/node-opcua-packet-analyzer/package.json
+++ b/packages/node-opcua-packet-analyzer/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-packet-analyzer",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -packet-analyzer",
+    "description": "pure nodejs OPCUA SDK - module packet-analyzer",
     "main": "./dist/source/index.js",
     "types": "./dist/source/index.d.ts",
     "scripts": {
@@ -40,5 +40,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
