--- a/packages/node-opcua-pseudo-session/package.json
+++ b/packages/node-opcua-pseudo-session/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-pseudo-session",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -client-proxy",
+    "description": "pure nodejs OPCUA SDK - module pseudo-session",
     "scripts": {
         "clean": "npx rimraf node_modules dist *.tsbuildinfo",
         "build": "tsc -b",
@@ -44,5 +44,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
