--- a/packages/node-opcua-service-call/package.json
+++ b/packages/node-opcua-service-call/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-service-call",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -service-call",
+    "description": "pure nodejs OPCUA SDK - module service-call",
     "scripts": {
         "test": "mocha",
         "lint": "eslint source test",
@@ -37,5 +37,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
