--- a/packages/node-opcua-service-write/package.json
+++ b/packages/node-opcua-service-write/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-service-write",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -service-write",
+    "description": "pure nodejs OPCUA SDK - module service-write",
     "scripts": {
         "test": "mocha",
         "clean": "npx rimraf node_modules dist *.tsbuildinfo _generated_",
@@ -36,5 +36,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
