--- a/packages/node-opcua-units/package.json
+++ b/packages/node-opcua-units/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-units",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -utils",
+    "description": "pure nodejs OPCUA SDK - module units",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "scripts": {
@@ -38,5 +38,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c"
+    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
