--- a/packages/node-opcua-xml2json/package.json
+++ b/packages/node-opcua-xml2json/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-xml2json",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module -xml2json",
+    "description": "pure nodejs OPCUA SDK - module xml2json",
     "main": "dist/source/index.js",
     "types": "dist/source/index.d.ts",
     "scripts": {
@@ -39,5 +39,9 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c"
+    "gitHead": "e4d73afdfcccb3491423149d9b9785888f4ebb3c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
