--- a/packages/node-opcua/package.json
+++ b/packages/node-opcua/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua",
     "version": "2.98.0",
-    "description": "pure nodejs OPCUA SDK - module ",
+    "description": "pure nodejs OPCUA SDK - module node-opcua",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "scripts": {
@@ -85,5 +85,9 @@
         "url": "https://github.com/sponsors/erossignon"
     },
     "homepage": "http://node-opcua.github.io/",
-    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c"
+    "gitHead": "07dcdd8e8c7f2b55544c6e23023093e35674829c",
+    "files": [
+        "dist",
+        "source"
+    ]
 }
