update nodeset generation

--- a/packages/node-opcua-address-space/package.json
+++ b/packages/node-opcua-address-space/package.json
@@ -94,6 +94,7 @@
         "nodeJS.d.ts",
         "nodeJS.js",
         "testHelpers.js",
-        "testHelpers.d.ts"
+        "testHelpers.d.ts",
+        "source_nodejs"
     ]
 }
