--- a/packages/node-opcua-debug/package.json
+++ b/packages/node-opcua-debug/package.json
@@ -39,6 +39,7 @@
         "distNodeJS",
         "source",
         "nodeJS.d.ts",
-        "nodeJS.js"
+        "nodeJS.js",
+        "source_nodejs"
     ]
 }
