--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -30,5 +30,7 @@
         "internet of things"
     ],
     "homepage": "http://node-opcua.github.io/",
-    "files": []
+    "files": [
+        "dist"
+    ]
 }
