--- a/packages/node-opcua-modeler/package.json
+++ b/packages/node-opcua-modeler/package.json
@@ -56,6 +56,7 @@
         "distNodeJS",
         "source",
         "nodeJS.d.ts",
-        "nodeJS.js"
+        "nodeJS.js",
+        "source_nodejs"
     ]
 }
