expose mini nodeset2.xml

--- a/packages/node-opcua-address-space/package.json
+++ b/packages/node-opcua-address-space/package.json
@@ -93,6 +93,7 @@
         "src",
         "nodeJS.d.ts",
         "nodeJS.js",
+        "nodesets",
         "testHelpers.js",
         "testHelpers.d.ts",
         "source_nodejs"
