--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -26,6 +26,8 @@
             "path": "node-opcua-address-space"
         },
         { "path": "node-opcua-test-fixtures" },
+        { "path": "node-opcua-address-space-base" },
+        { "path": "node-opcua-address-space" },
         { "path": "node-opcua-aggregates" },
         { "path": "node-opcua-file-transfer" },
         { "path": "node-opcua-benchmarker" },
@@ -34,6 +36,7 @@
         { "path": "node-opcua-samples" },
         { "path": "node-opcua-convert-nodeset-to-javascript" },
         { "path": "node-opcua-model" },
+        { "path": "node-opcua-nodeset-ua" },
         { "path": "node-opcua-nodeset-adi" },
         { "path": "node-opcua-nodeset-auto-id" },
         { "path": "node-opcua-nodeset-cnc" },
@@ -52,7 +55,6 @@
         { "path": "node-opcua-nodeset-pack-ml" },
         { "path": "node-opcua-nodeset-padim" },
         { "path": "node-opcua-nodeset-robotics" },
-        { "path": "node-opcua-nodeset-ua" },
         { "path": "node-opcua-nodeset-woodworking" },
         { "path": "node-opcua-nodesets" },
         { "path": "node-opcua-service-secure-channel" },
