adjust interactive client

--- a/packages/node-opcua-samples/package.json
+++ b/packages/node-opcua-samples/package.json
@@ -27,7 +27,9 @@
         "node-opcua-address-space-for-conformance-testing": "2.102.0",
         "node-opcua-assert": "2.98.1",
         "node-opcua-client-crawler": "2.102.0",
+        "node-opcua-client-proxy": "2.102.0",
         "node-opcua-crypto": "^2.1.2",
+        "node-opcua-packet-analyzer": "2.102.0",
         "node-opcua-pki": "^3.0.2",
         "node-opcua-server-configuration": "2.102.0",
         "node-opcua-utils": "2.98.1",
