--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
-        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && lerna exec --concurrency 1 --sort --stream ncu -- -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest --packageFile package.json ",
+        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && lerna exec --concurrency 10 --sort --stream ncu -- -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest --packageFile package.json ",
         "ncu_": "npx npm-check --skip-unused -ayu && lerna exec --sort --concurrency 1 --stream -- npx npm-check --skip-unused -ayu",
         "prettier-watch": "onchange \"packages/*/(src|test|source)/**/*.(js|ts)\" -v -p -- prettier --write {{changed}}",
         "lebab-let": "lerna exec lebab  --replace index.js  --transform let && lerna exec lebab  --replace test  --transform let && lerna exec lebab  --replace src  --transform let",
@@ -64,14 +64,14 @@
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@types/mocha": "^10.0.1",
-        "@types/prettier": "^2.7.2",
-        "@typescript-eslint/eslint-plugin": "^5.59.2",
-        "@typescript-eslint/parser": "^5.59.2",
+        "@types/prettier": "^2.7.3",
+        "@typescript-eslint/eslint-plugin": "^5.59.8",
+        "@typescript-eslint/parser": "^5.59.8",
         "app-module-path": "^2.2.0",
         "benchmark": "^2.1.4",
         "bignumber.js": "^9.1.1",
         "coveralls": "^3.1.1",
-        "csv": "^6.2.12",
+        "csv": "^6.3.1",
         "enum": "3.0.4",
         "ersatz-node-expat": "^0.1.6",
         "eslint-cli": "^1.1.1",
@@ -85,20 +85,20 @@
         "nyc": "^15.1.0",
         "prettier": "^2.8.8",
         "ts-node": "^10.9.1",
-        "typescript": "5.0.4"
+        "typescript": "5.1.3"
     },
     "typings": "./packages/node-opcua/node-opcua.d.ts",
     "dependencies": {
-        "@ster5/global-mutex": "^1.2.0",
+        "@ster5/global-mutex": "^2.0.0",
         "@types/async": "^3.2.20",
         "@types/bonjour": "^3.5.10",
-        "@types/lodash": "4.14.194",
+        "@types/lodash": "4.14.195",
         "@types/long": "^4.0.2",
         "@types/mkdirp": "1.0.2",
-        "@types/node": "20.1.0",
+        "@types/node": "20.2.5",
         "@types/rimraf": "^3.0.2",
-        "@types/sinon": "10.0.14",
-        "@types/underscore": "^1.11.4",
+        "@types/sinon": "10.0.15",
+        "@types/underscore": "^1.11.5",
         "@types/wordwrap": "^1.0.1",
         "@types/yargs": "17.0.24",
         "async": "^3.2.4",
@@ -109,14 +109,14 @@
         "chalk": "4.1.2",
         "cli-table3": "^0.6.3",
         "cli-truncate": "2.1.0",
-        "csv-parse": "5.3.10",
+        "csv-parse": "5.4.0",
         "date-utils": "^1.2.21",
         "deassertify": "^0.2.0",
         "delayed": "^2.0.0",
         "dequeue": "^1.0.5",
         "easy-table": "^1.2.0",
         "env-paths": "2.2.1",
-        "eslint": "8.40.0",
+        "eslint": "8.41.0",
         "exit": "^0.1.2",
         "fqdn": "^0.0.3",
         "hexy": "0.3.4",
@@ -130,23 +130,23 @@
         "memfs": "^3.5.1",
         "mkdirp": "1.0.4",
         "mocha-clean": "^1.0.0",
-        "node-opcua-crypto": "^2.2.0",
-        "node-opcua-pki": "^3.1.2",
+        "node-opcua-crypto": "3.0.5",
+        "node-opcua-pki": "4.2.0",
         "object.values": "^1.1.6",
         "pretty-ms": "^8.0.0",
         "progress": "^2.0.3",
         "rimraf": "3.0.2",
-        "semver": "^7.5.0",
+        "semver": "^7.5.1",
         "set-prototype-of": "^1.0.0",
         "shebang-loader": "^0.0.1",
         "should": "^13.2.3",
-        "sinon": "^15.0.4",
+        "sinon": "^15.1.0",
         "source-map-support": "^0.5.21",
         "sprintf-js": "^1.1.2",
         "sterfive-bonjour-service": "1.1.4",
         "thenify": "^3.3.1",
         "treeify": "^1.1.0",
-        "tslib": "^2.5.0",
+        "tslib": "^2.5.2",
         "underscore": "^1.13.6",
         "vorpal": "^1.12.0",
         "vorpal-repl": "^1.1.8",
