--- a/packages/node-opcua-address-space/package.json
+++ b/packages/node-opcua-address-space/package.json
@@ -16,8 +16,8 @@
         "c": "mocha --version"
     },
     "dependencies": {
-        "@types/lodash": "4.14.194",
-        "@types/semver": "^7.3.13",
+        "@types/lodash": "4.14.195",
+        "@types/semver": "^7.5.0",
         "async": "^3.2.4",
         "chalk": "4.1.2",
         "dequeue": "^1.0.5",
@@ -28,7 +28,7 @@
         "node-opcua-binary-stream": "2.98.1",
         "node-opcua-client-dynamic-extension-object": "2.103.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "^2.2.0",
+        "node-opcua-crypto": "3.0.5",
         "node-opcua-data-access": "2.103.0",
         "node-opcua-data-model": "2.102.0",
         "node-opcua-data-value": "2.102.0",
@@ -52,7 +52,7 @@
         "node-opcua-utils": "2.98.1",
         "node-opcua-variant": "2.102.0",
         "node-opcua-xml2json": "2.103.0",
-        "semver": "^7.5.0",
+        "semver": "^7.5.1",
         "set-prototype-of": "^1.0.0",
         "thenify": "^3.3.1",
         "xml-writer": "^1.7.0"
@@ -66,7 +66,7 @@
         "node-opcua-service-filter": "2.103.0",
         "node-opcua-test-fixtures": "2.103.0",
         "should": "^13.2.3",
-        "sinon": "^15.0.4",
+        "sinon": "^15.1.0",
         "source-map-support": "^0.5.21"
     },
     "author": "Etienne Rossignon",
