--- a/packages/node-opcua-certificate-manager/package.json
+++ b/packages/node-opcua-certificate-manager/package.json
@@ -12,16 +12,18 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "dependencies": {
+        "node-opcua-pki": "4.2.0",
+        "node-opcua-crypto": "3.0.5",
         "@types/mkdirp": "1.0.2",
         "env-paths": "2.2.1",
         "mkdirp": "1.0.4",
         "node-opcua-assert": "2.98.1",
-        "node-opcua-crypto": "^2.2.0",
         "node-opcua-debug": "2.99.0",
         "node-opcua-object-registry": "2.99.0",
-        "node-opcua-pki": "^3.1.2",
         "node-opcua-status-code": "2.98.1",
         "thenify": "^3.3.1"
+    },
+    "peerDependencies": {
     },
     "devDependencies": {
         "mocha": "^10.2.0",
