--- a/packages/node-opcua-client/package.json
+++ b/packages/node-opcua-client/package.json
@@ -13,7 +13,7 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "dependencies": {
-        "@ster5/global-mutex": "^1.2.0",
+        "@ster5/global-mutex": "^2.0.0",
         "@types/async": "^3.2.20",
         "async": "^3.2.4",
         "chalk": "4.1.2",
@@ -24,7 +24,7 @@
         "node-opcua-client-dynamic-extension-object": "2.103.0",
         "node-opcua-common": "2.103.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "^2.2.0",
+        "node-opcua-crypto": "3.0.5",
         "node-opcua-data-model": "2.102.0",
         "node-opcua-data-value": "2.102.0",
         "node-opcua-date-time": "2.99.0",
@@ -33,7 +33,7 @@
         "node-opcua-hostname": "2.98.1",
         "node-opcua-nodeid": "2.99.0",
         "node-opcua-object-registry": "2.99.0",
-        "node-opcua-pki": "^3.1.2",
+        "node-opcua-pki": "4.2.0",
         "node-opcua-pseudo-session": "2.103.0",
         "node-opcua-schemas": "2.103.0",
         "node-opcua-secure-channel": "2.103.0",
@@ -58,7 +58,7 @@
         "thenify": "^3.3.1"
     },
     "devDependencies": {
-        "@types/underscore": "^1.11.4",
+        "@types/underscore": "^1.11.5",
         "dequeue": "^1.0.5",
         "mocha": "^10.2.0",
         "node-opcua-address-space": "2.103.0",
@@ -67,7 +67,7 @@
         "node-opcua-leak-detector": "2.99.0",
         "node-opcua-nodesets": "2.103.0",
         "should": "^13.2.3",
-        "sinon": "^15.0.4",
+        "sinon": "^15.1.0",
         "underscore": "^1.13.6"
     },
     "eslintConfig": {
