--- a/packages/node-opcua-common/package.json
+++ b/packages/node-opcua-common/package.json
@@ -12,11 +12,11 @@
     "types": "./dist/index.d.ts",
     "dependencies": {
         "node-opcua-assert": "2.98.1",
-        "node-opcua-crypto": "^2.2.0",
+        "node-opcua-crypto": "3.0.5",
         "node-opcua-types": "2.103.0"
     },
     "devDependencies": {
-        "@types/node": "20.1.0",
+        "@types/node": "20.2.5",
         "should": "^13.2.3"
     },
     "author": "Etienne Rossignon",
