--- a/packages/node-opcua-server-configuration/package.json
+++ b/packages/node-opcua-server-configuration/package.json
@@ -22,13 +22,13 @@
         "node-opcua-client": "2.103.0",
         "node-opcua-common": "2.103.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "^2.2.0",
+        "node-opcua-crypto": "3.0.5",
         "node-opcua-data-model": "2.102.0",
         "node-opcua-debug": "2.99.0",
         "node-opcua-file-transfer": "2.103.0",
         "node-opcua-hostname": "2.98.1",
         "node-opcua-nodeid": "2.99.0",
-        "node-opcua-pki": "^3.1.2",
+        "node-opcua-pki": "4.2.0",
         "node-opcua-pseudo-session": "2.103.0",
         "node-opcua-secure-channel": "2.103.0",
         "node-opcua-server": "2.103.0",
