--- a/packages/node-opcua-server/package.json
+++ b/packages/node-opcua-server/package.json
@@ -12,7 +12,7 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "dependencies": {
-        "@ster5/global-mutex": "^1.2.0",
+        "@ster5/global-mutex": "^2.0.0",
         "async": "^3.2.4",
         "chalk": "4.1.2",
         "dequeue": "^1.0.5",
@@ -27,7 +27,7 @@
         "node-opcua-client-dynamic-extension-object": "2.103.0",
         "node-opcua-common": "2.103.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "^2.2.0",
+        "node-opcua-crypto": "3.0.5",
         "node-opcua-data-model": "2.102.0",
         "node-opcua-data-value": "2.102.0",
         "node-opcua-date-time": "2.99.0",
@@ -66,7 +66,7 @@
         "node-opcua-leak-detector": "2.99.0",
         "node-opcua-test-helpers": "2.98.1",
         "should": "^13.2.3",
-        "sinon": "^15.0.4",
+        "sinon": "^15.1.0",
         "underscore": "^1.13.6"
     },
     "author": "Etienne Rossignon",
