--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,30 +1,9 @@
 {
+    "extends": "../tsconfig.common.json",
     "compilerOptions": {
-        "moduleResolution": "node",
-        "strictFunctionTypes": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "target": "es2015",
-        "module": "commonjs",
-        "declaration": true,
-        "sourceMap": true,
-        "strict": true,
-        "listFiles": false,
-        "noStrictGenericChecks": false,
-        "noImplicitThis": true,
-        "skipLibCheck": false,
-        "removeComments": false /* to prevent Istanbul ignore statements in comments from disappearing */,
-        "outDir": "dist",
-        "incremental": true,
-        "composite": true,
-	"esModuleInterop": true
+        "outDir": "dist"
     },
-    "exclude": [
-        "**/node_modules",
-        "**/dist/*",
-        "packages/*",
-        "tmp/*"
-    ],
+    "exclude": ["**/node_modules", "**/dist/*", "packages/*", "tmp/*"],
     "include": [],
     "references": [
         { "path": "node-opcua" },
