--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
         "memfs": "^4.2.0",
         "mkdirp": "1.0.4",
         "mocha-clean": "^1.0.0",
-        "node-opcua-crypto": "3.1.0",
+        "node-opcua-crypto": "4.0.0-beta.0",
         "node-opcua-pki": "4.2.1",
         "object.values": "^1.1.6",
         "pretty-ms": "^8.0.0",
