--- a/packages/node-opcua-address-space-base/package.json
+++ b/packages/node-opcua-address-space-base/package.json
@@ -19,7 +19,7 @@
         "node-opcua-assert": "2.105.0",
         "node-opcua-basic-types": "2.108.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "3.1.0",
+        "node-opcua-crypto": "4.0.0-beta.0",
         "node-opcua-data-model": "2.108.0",
         "node-opcua-data-value": "2.108.0",
         "node-opcua-date-time": "2.108.0",
