--- a/packages/node-opcua-address-space/package.json
+++ b/packages/node-opcua-address-space/package.json
@@ -28,7 +28,7 @@
         "node-opcua-binary-stream": "2.108.0",
         "node-opcua-client-dynamic-extension-object": "2.108.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "3.1.0",
+        "node-opcua-crypto": "4.0.0-beta.0",
         "node-opcua-data-access": "2.108.0",
         "node-opcua-data-model": "2.108.0",
         "node-opcua-data-value": "2.108.0",
