--- a/packages/node-opcua-common/package.json
+++ b/packages/node-opcua-common/package.json
@@ -12,7 +12,7 @@
     "types": "./dist/index.d.ts",
     "dependencies": {
         "node-opcua-assert": "2.105.0",
-        "node-opcua-crypto": "3.1.0",
+        "node-opcua-crypto": "4.0.0-beta.0",
         "node-opcua-types": "2.108.0"
     },
     "devDependencies": {
