--- a/packages/node-opcua-secure-channel/package.json
+++ b/packages/node-opcua-secure-channel/package.json
@@ -20,7 +20,7 @@
         "node-opcua-certificate-manager": "2.108.0",
         "node-opcua-chunkmanager": "2.108.0",
         "node-opcua-common": "2.108.0",
-        "node-opcua-crypto": "3.1.0",
+        "node-opcua-crypto": "4.0.0-beta.0",
         "node-opcua-debug": "2.108.0",
         "node-opcua-factory": "2.108.0",
         "node-opcua-nodeid": "2.108.0",
