--- a/.npmignore
+++ b/.npmignore
@@ -1,53 +1,53 @@
+.codeclimate.yml
+.coveralls.yml
+.DS_Store
+.eslintignore
 .git*
 .idea/
-.travis.yml
-appveyor.yml
-circle.yml
-.codeclimate.yml
-.eslintignore
-brfy.bat
-lerna-debug.log
 .jshintrc
 .release.json
-.coveralls.yml
-code_gen/
-CTT/
-docs/
-autodoc
-documentation/
-examples/
-support/
-test/
-testing.js
-.DS_Store
-coverage.html
-lib-cov
-private_tests/
-out/
-packets/
-tmp/
+.travis.yml
 .vagrant
-VagrantFile
-coverage
-output2.bin
-specs/
-node_modules/
-*.swp
-*#
-tmptmp/
-demo/
-dump*
-a.*
+*.gz
 *.pcap
 *.raw
+*.swp
+*.tgz
+*#
+a.*
+appveyor.yml
+autodoc
+brfy.bat
+certificates/
+circle.yml
+code_gen/
+coverage
+coverage.html
+CTT/
+CTT/Node-OPCUA-Client
+demo/
+docs/
+documentation/
+dump*
+examples/
+lerna-debug.log
+lib-cov
 lib/pki/scrapme_toto.conf
 Makefile
+node_modules/
 notes.txt
-yuidoc.json
-*.gz
-*.tgz
-Vagrantfile
-tttt
+out/
+output2.bin
 package
+packets/
+private_tests/
+specs/
+support/
 test_compliance
-certificates/
+test/
+testing.js
+tmp/
+tmptmp/
+Vagrantfile
+VagrantFile
+yuidoc.json
