--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "devDependencies": {
         "@types/mocha": "^10.0.1",
         "@types/prettier": "^2.7.3",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
+        "@typescript-eslint/eslint-plugin": "^6.4.0",
+        "@typescript-eslint/parser": "^6.4.0",
         "app-module-path": "^2.2.0",
         "benchmark": "^2.1.4",
         "bignumber.js": "^9.1.1",
@@ -74,15 +74,15 @@
         "enum": "3.0.4",
         "ersatz-node-expat": "^0.1.6",
         "eslint-cli": "^1.1.1",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-import": "^2.27.5",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-import": "^2.28.0",
         "eslint-plugin-prettier": "^5.0.0",
         "literate-programming": "^1.1.0",
         "litpro": "^2.1.0",
         "mocha": "^10.2.0",
         "mocha-lcov-reporter": "^1.3.0",
         "nyc": "^15.1.0",
-        "prettier": "^3.0.0",
+        "prettier": "^3.0.1",
         "should": "^13.2.3",
         "ts-node": "^10.9.1",
         "typescript": "5.1.6"
@@ -92,13 +92,13 @@
         "@ster5/global-mutex": "^2.0.0",
         "@types/async": "^3.2.20",
         "@types/bonjour": "^3.5.10",
-        "@types/lodash": "4.14.195",
+        "@types/lodash": "4.14.197",
         "@types/long": "^4.0.2",
         "@types/mkdirp": "1.0.2",
-        "@types/node": "20.4.2",
+        "@types/node": "20.5.0",
         "@types/rimraf": "^3.0.2",
-        "@types/sinon": "10.0.15",
-        "@types/underscore": "^1.11.5",
+        "@types/sinon": "10.0.16",
+        "@types/underscore": "^1.11.6",
         "@types/wordwrap": "^1.0.1",
         "@types/yargs": "17.0.24",
         "async": "^3.2.4",
@@ -116,22 +116,22 @@
         "dequeue": "^1.0.5",
         "easy-table": "^1.2.0",
         "env-paths": "2.2.1",
-        "eslint": "8.45.0",
+        "eslint": "8.47.0",
         "exit": "^0.1.2",
         "fqdn": "^0.0.3",
-        "hexy": "0.3.4",
+        "hexy": "0.3.5",
         "hjson": "^3.2.2",
         "humanize": "0.0.9",
         "js2xmlparser": "^5.0.0",
-        "lerna": "7.1.4",
+        "lerna": "7.1.5",
         "lockfile": "^1.0.4",
         "lodash": "4.17.21",
         "long": "^4.0.0",
-        "memfs": "^4.2.0",
+        "memfs": "^4.2.1",
         "mkdirp": "1.0.4",
         "mocha-clean": "^1.0.0",
-        "node-opcua-crypto": "4.0.0-beta.0",
-        "node-opcua-pki": "4.2.1",
+        "node-opcua-crypto": "4.1.0",
+        "node-opcua-pki": "4.3.0",
         "object.values": "^1.1.6",
         "pretty-ms": "^8.0.0",
         "progress": "^2.0.3",
@@ -145,7 +145,7 @@
         "sterfive-bonjour-service": "1.1.4",
         "thenify": "^3.3.1",
         "treeify": "^1.1.0",
-        "tslib": "^2.6.0",
+        "tslib": "^2.6.1",
         "underscore": "^1.13.6",
         "vorpal": "^1.12.0",
         "vorpal-repl": "^1.1.8",
