--- a/packages/node-opcua-address-space/package.json
+++ b/packages/node-opcua-address-space/package.json
@@ -16,7 +16,7 @@
         "c": "mocha --version"
     },
     "dependencies": {
-        "@types/lodash": "4.14.195",
+        "@types/lodash": "4.14.197",
         "@types/semver": "^7.5.0",
         "async": "^3.2.4",
         "chalk": "4.1.2",
@@ -28,7 +28,7 @@
         "node-opcua-binary-stream": "2.108.0",
         "node-opcua-client-dynamic-extension-object": "2.108.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "4.0.0-beta.0",
+        "node-opcua-crypto": "4.1.0",
         "node-opcua-data-access": "2.108.0",
         "node-opcua-data-model": "2.108.0",
         "node-opcua-data-value": "2.108.0",
