--- a/packages/node-opcua-client/package.json
+++ b/packages/node-opcua-client/package.json
@@ -24,7 +24,7 @@
         "node-opcua-client-dynamic-extension-object": "2.108.0",
         "node-opcua-common": "2.108.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "4.0.0-beta.0",
+        "node-opcua-crypto": "4.1.0",
         "node-opcua-data-model": "2.108.0",
         "node-opcua-data-value": "2.108.0",
         "node-opcua-date-time": "2.108.0",
@@ -33,7 +33,7 @@
         "node-opcua-hostname": "2.105.0",
         "node-opcua-nodeid": "2.108.0",
         "node-opcua-object-registry": "2.108.0",
-        "node-opcua-pki": "4.2.1",
+        "node-opcua-pki": "4.3.0",
         "node-opcua-pseudo-session": "2.108.0",
         "node-opcua-schemas": "2.108.0",
         "node-opcua-secure-channel": "2.108.0",
@@ -58,7 +58,7 @@
         "thenify": "^3.3.1"
     },
     "devDependencies": {
-        "@types/underscore": "^1.11.5",
+        "@types/underscore": "^1.11.6",
         "dequeue": "^1.0.5",
         "mocha": "^10.2.0",
         "node-opcua-address-space": "2.108.0",
