--- a/packages/node-opcua-server-configuration/package.json
+++ b/packages/node-opcua-server-configuration/package.json
@@ -12,7 +12,7 @@
     "types": "./dist/index.d.ts",
     "dependencies": {
         "chalk": "4.1.2",
-        "memfs": "^4.2.0",
+        "memfs": "^4.2.1",
         "node-opcua-address-space": "2.108.0",
         "node-opcua-address-space-base": "2.108.0",
         "node-opcua-assert": "2.105.0",
@@ -22,13 +22,13 @@
         "node-opcua-client": "2.108.0",
         "node-opcua-common": "2.108.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "4.0.0-beta.0",
+        "node-opcua-crypto": "4.1.0",
         "node-opcua-data-model": "2.108.0",
         "node-opcua-debug": "2.108.0",
         "node-opcua-file-transfer": "2.108.0",
         "node-opcua-hostname": "2.105.0",
         "node-opcua-nodeid": "2.108.0",
-        "node-opcua-pki": "4.2.1",
+        "node-opcua-pki": "4.3.0",
         "node-opcua-pseudo-session": "2.108.0",
         "node-opcua-secure-channel": "2.108.0",
         "node-opcua-server": "2.108.0",
