--- a/packages/node-opcua-server/package.json
+++ b/packages/node-opcua-server/package.json
@@ -27,7 +27,7 @@
         "node-opcua-client-dynamic-extension-object": "2.108.0",
         "node-opcua-common": "2.108.0",
         "node-opcua-constants": "2.98.1",
-        "node-opcua-crypto": "4.0.0-beta.0",
+        "node-opcua-crypto": "4.1.0",
         "node-opcua-data-model": "2.108.0",
         "node-opcua-data-value": "2.108.0",
         "node-opcua-date-time": "2.108.0",
