--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,10 @@ environment:
     # - nodejs_version: "11" (not supported any more)
     # - nodejs_version: "12"  (deprecated in April 30th 2022)
     # - nodejs_version: "14"
-    - nodejs_version: "16"
-    # - nodejs_version: "18" 
+    # - nodejs_version: "16" (deprecated in October 2023)
+    - nodejs_version: "18" 
+    # - nodejs_version: "20.6.0" 
+    
 
 platform:
   - x64
@@ -30,7 +32,7 @@ install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version $env:platform
   # install modules (using appveyor-retry to prevent EPERM bug)
-  - npm install -g npm pnpm@7 typescript ts-node
+  - npm install -g pnpm@7 typescript ts-node
   - set path=C:\Users\appveyor\AppData\Roaming\npm\;%path%
   - tsc --version
   - appveyor-retry pnpm recursive install --no-frozen-lockfile
